# ticket-shicket-be

./: .env.example  .gitignore  AddTickets.ipynb  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.py  nats-server.conf  pyproject.toml  sqlc.yaml  start_dev.sh  stop_dev.sh  test-checkout.html
.claude/: settings.json
Claude Conversations/: claude-conversation-2026-05-12-5b043fd2.md
docs/: UntilNow.md  codex-phase-0-chat.md  docs.go  organizer.md  organizer_2026_04_10_maya_patel_test.md  organizer_media_test_2026_04_10.md  swagger.json  swagger.yaml  ticket-scanning-flow-not-yet-finalized.md  user-feature.md  user-guest-auth.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql  000002_add_slug_field_to_user.down.sql  000002_add_slug_field_to_user.up.sql  000003_adding_guests_table.up.sql  000004_adding_roles_and_permissions.down.sql  000004_adding_roles_and_permissions.up.sql  000005_many_to_many_tables.down.sql  000005_many_to_many_tables.up.sql  000006_refresh_token.up.sql  000007_guest_refresh_tokens.down.sql  000007_guest_refresh_tokens.up.sql
notebooks/: downloaded_test.txt  hash_password.ipynb  s3testing.ipynb  testing_nats.ipynb
scripts/: db_query_engine.py  run_expiry_worker.py
src/: admin.py  cli.py  config.py  exceptions.py  handlers.py  lifespan.py  server.py
superadmin-ui/: index.html  package-lock.json  package.json  vite.config.ts.timestamp-1778393167743-2ecd30650aef.mjs
tests/: conftest.py  (+4 more)
wiki/: README.md  (+4 more)
(+432 files in other folders)
